tags added to cells

--- a/notebooks/10_Indicators/11_List to Excel/B.ipynb
+++ b/notebooks/10_Indicators/11_List to Excel/B.ipynb
@@ -24,7 +24,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "2244ed5e-0c4a-43cd-85d0-cf6370109348",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "change-false"
+    ]
+   },
    "outputs": [],
    "source": [
     "TOKEN = '<YOUR_TOKEN>'\n",
