--- a/notebooks/10_Indicators/12_Token Private/B.ipynb
+++ b/notebooks/10_Indicators/12_Token Private/B.ipynb
@@ -25,11 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = '<YOUR_TOKEN>'\n",
+    "TOKEN = '<YOUR_TOKEN>'\n",
     "\n",
-    "headers = dict()\n",
-    "headers['Host'] = 'api.esios.ree.es'\n",
-    "headers['x-api-key'] = token"
+    "headers = {\n",
+    "    'Host': 'api.esios.ree.es',\n",
+    "    'x-api-key': TOKEN\n",
+    "}"
    ]
   },
   {
@@ -78,14 +79,6 @@
    "source": [
     "## Create a new file and execute an example"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65321ca9-17ff-48da-8ecb-9eccb16ae94d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
