--- a/notebooks/10_Indicators/13_Preprocess/B.ipynb
+++ b/notebooks/10_Indicators/13_Preprocess/B.ipynb
@@ -20,7 +20,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "9ee69204-a1da-4608-aeb3-dbeb88a2b759",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "change-false"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -139,7 +143,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "39aba63d-7bb9-466f-924f-d33fc9e95fa6",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "change-false"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -289,7 +297,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "5ef8757d-c56f-479e-80f5-d460580c8c7d",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "change-false"
+    ]
+   },
    "outputs": [
     {
      "data": {
