--- a/notebooks/30_Dataviz/31_Multivariate Generation/B.ipynb
+++ b/notebooks/30_Dataviz/31_Multivariate Generation/B.ipynb
@@ -26,9 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "e981d84b-dab7-4048-969d-cba05bc63024",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "change-false"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -255,7 +259,7 @@
        "[8760 rows x 18 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "65fa491c-9fdc-4b75-9192-03dacd86f420",
    "metadata": {},
    "outputs": [
@@ -506,7 +510,7 @@
        "[365 rows x 18 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "id": "59723cf9",
    "metadata": {},
    "outputs": [
@@ -755,7 +759,7 @@
        "[31 rows x 18 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "c02d99b6-6175-4db5-b0e1-c2c7b0e62c69",
    "metadata": {},
    "outputs": [
