--- a/notebooks/10_Indicators/11_List to Excel/B.ipynb
+++ b/notebooks/10_Indicators/11_List to Excel/B.ipynb
@@ -3,7 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "7a615e0e-bb7d-41cd-a3e0-05047d36a716",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.00255,
+     "end_time": "2024-05-08T12:16:54.220230",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.217680",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Download List of Indicators"
    ]
@@ -12,6 +21,13 @@
    "cell_type": "markdown",
    "id": "9548f08d-16ff-4967-9c40-a49c43a57f00",
    "metadata": {
+    "papermill": {
+     "duration": 0.002123,
+     "end_time": "2024-05-08T12:16:54.224534",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.222411",
+     "status": "completed"
+    },
     "tags": []
    },
    "source": [
@@ -22,16 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "2244ed5e-0c4a-43cd-85d0-cf6370109348",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.229228Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.228989Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.235725Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.235256Z"
+    },
+    "papermill": {
+     "duration": 0.010883,
+     "end_time": "2024-05-08T12:16:54.237156",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.226273",
+     "status": "completed"
+    },
     "tags": [
      "change-false"
     ]
    },
    "outputs": [],
    "source": [
-    "TOKEN = '<YOUR_TOKEN>'\n",
+    "TOKEN = '273695bb4f30b8ab8de054a0410ee2a9d09c97a5006e3a07c27615e6c60888a7'\n",
     "\n",
     "headers = {\n",
     "    'Host': 'api.esios.ree.es',\n",
@@ -42,7 +71,16 @@
   {
    "cell_type": "markdown",
    "id": "1113d155-9c37-4f82-8640-d103879d0be7",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.015107,
+     "end_time": "2024-05-08T12:16:54.254768",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.239661",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Request the indicators list\n",
     "\n",
@@ -51,9 +89,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "df034fb1-359f-4ceb-9999-c4cf445457a5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.260325Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.259953Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.266160Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.265130Z"
+    },
+    "papermill": {
+     "duration": 0.011073,
+     "end_time": "2024-05-08T12:16:54.267507",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.256434",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -61,7 +114,7 @@
        "'https://api.esios.ree.es/indicators'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,9 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "9ab6736c-de5f-43ce-994c-1a1792080d87",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.271921Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.271472Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.465743Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.465349Z"
+    },
+    "papermill": {
+     "duration": 0.198269,
+     "end_time": "2024-05-08T12:16:54.467398",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.269129",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -85,16 +153,40 @@
   {
    "cell_type": "markdown",
    "id": "8b6d79ed-3900-432a-83a9-fb72751d4836",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001589,
+     "end_time": "2024-05-08T12:16:54.471170",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.469581",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Get the `JSON`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "11b61c53-6fb9-4cb1-8005-beb805da2f38",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.474736Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.474484Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.482887Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.482579Z"
+    },
+    "papermill": {
+     "duration": 0.011357,
+     "end_time": "2024-05-08T12:16:54.483758",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.472401",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "data = res.json()"
@@ -103,16 +195,40 @@
   {
    "cell_type": "markdown",
    "id": "4729c2a2-899c-430c-acf0-8a8988aa0111",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001114,
+     "end_time": "2024-05-08T12:16:54.486126",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.485012",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Create a `DataFrame`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "53761074-291f-42fb-a60e-e5475e8ffbcf",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.489423Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.489265Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.496547Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.496266Z"
+    },
+    "papermill": {
+     "duration": 0.010099,
+     "end_time": "2024-05-08T12:16:54.497418",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.487319",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -207,7 +323,7 @@
        "[1939 rows x 4 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,16 +337,40 @@
   {
    "cell_type": "markdown",
    "id": "c84fa189-7e81-4644-be70-b7c753e8c657",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001178,
+     "end_time": "2024-05-08T12:16:54.500126",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.498948",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Set the `id` column as the index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "5c25a982-79b9-4c26-9657-ab147229a1f7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.503033Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.502917Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.506833Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.506606Z"
+    },
+    "papermill": {
+     "duration": 0.006259,
+     "end_time": "2024-05-08T12:16:54.507496",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.501237",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -328,7 +468,7 @@
        "[1939 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,16 +481,40 @@
   {
    "cell_type": "markdown",
    "id": "29c57096-2ecc-4e9b-a05e-e6ba823099af",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001044,
+     "end_time": "2024-05-08T12:16:54.509736",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.508692",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Save the *styled* `DataFrame` to a new variable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "a9d29169-3552-4778-bfb0-8ed689483097",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.512702Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.512504Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.709077Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.708809Z"
+    },
+    "papermill": {
+     "duration": 0.199059,
+     "end_time": "2024-05-08T12:16:54.709934",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.510875",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df_indicators_styled = df_indicators.style"
@@ -359,16 +523,40 @@
   {
    "cell_type": "markdown",
    "id": "361580f3-855d-4d0c-afb7-98819ff7455b",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001262,
+     "end_time": "2024-05-08T12:16:54.712597",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.711335",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Export the `DataFrame` to an Excel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "775ab6f2-25ca-4d9b-9f02-f706e6d1164a",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:16:54.715663Z",
+     "iopub.status.busy": "2024-05-08T12:16:54.715475Z",
+     "iopub.status.idle": "2024-05-08T12:16:54.913986Z",
+     "shell.execute_reply": "2024-05-08T12:16:54.913712Z"
+    },
+    "papermill": {
+     "duration": 0.20129,
+     "end_time": "2024-05-08T12:16:54.915026",
+     "exception": false,
+     "start_time": "2024-05-08T12:16:54.713736",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df_indicators_styled.to_excel('../../../data/indicators.xlsx')"
@@ -392,6 +580,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 2.021789,
+   "end_time": "2024-05-08T12:16:55.131466",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "/Users/sota/Dropbox/2 Business/1 Datons/2 Areas/Courses/ESIOS-API/materials/notebooks/10_Indicators/11_List to Excel/B.ipynb",
+   "output_path": "/Users/sota/Dropbox/2 Business/1 Datons/2 Areas/Courses/ESIOS-API/materials/notebooks/10_Indicators/11_List to Excel/B.ipynb",
+   "parameters": {},
+   "start_time": "2024-05-08T12:16:53.109677",
+   "version": "2.5.0"
   },
   "toc-autonumbering": true
  },
