--- a/notebooks/20_Portable Function/21_Parameters/B.ipynb
+++ b/notebooks/20_Portable Function/21_Parameters/B.ipynb
@@ -3,7 +3,16 @@
   {
    "cell_type": "markdown",
    "id": "9b72400e-7290-424c-a6cf-bd6cc93f59eb",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.003614,
+     "end_time": "2024-05-08T12:20:59.488597",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.484983",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "# Select a Date Range within the API"
    ]
@@ -11,16 +20,40 @@
   {
    "cell_type": "markdown",
    "id": "71461870-1123-4157-bba7-a7316d4f2bb6",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.002029,
+     "end_time": "2024-05-08T12:20:59.493455",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.491426",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Load the credentials from the `JSON` file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "d48d45cf-a8df-4fc1-a2ce-8c9414c5f8a5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:20:59.497943Z",
+     "iopub.status.busy": "2024-05-08T12:20:59.497743Z",
+     "iopub.status.idle": "2024-05-08T12:20:59.500836Z",
+     "shell.execute_reply": "2024-05-08T12:20:59.500492Z"
+    },
+    "papermill": {
+     "duration": 0.006686,
+     "end_time": "2024-05-08T12:20:59.501866",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.495180",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -32,7 +65,16 @@
   {
    "cell_type": "markdown",
    "id": "56f54f4f-6f8f-418f-bb68-1e2f0183db1c",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001727,
+     "end_time": "2024-05-08T12:20:59.505289",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.503562",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Request the information of the indicator"
    ]
@@ -40,16 +82,40 @@
   {
    "cell_type": "markdown",
    "id": "5b8eaf8a-146b-4c34-a02f-20fafeda9e25",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001493,
+     "end_time": "2024-05-08T12:20:59.508357",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.506864",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Choose the indicator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "01e7b690-76ce-4fa5-b305-fa8850994abf",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:20:59.512100Z",
+     "iopub.status.busy": "2024-05-08T12:20:59.511862Z",
+     "iopub.status.idle": "2024-05-08T12:20:59.515112Z",
+     "shell.execute_reply": "2024-05-08T12:20:59.514871Z"
+    },
+    "papermill": {
+     "duration": 0.006222,
+     "end_time": "2024-05-08T12:20:59.515939",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.509717",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -57,7 +123,7 @@
        "'https://api.esios.ree.es/indicators/84'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,16 +138,40 @@
   {
    "cell_type": "markdown",
    "id": "877e0081-de31-4a7b-8bf5-905b307cedd7",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001522,
+     "end_time": "2024-05-08T12:20:59.519222",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.517700",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### How to introduce the date?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "9f7ea991-490a-40f6-9b7f-eb7d25b1b865",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:20:59.522623Z",
+     "iopub.status.busy": "2024-05-08T12:20:59.522525Z",
+     "iopub.status.idle": "2024-05-08T12:20:59.524506Z",
+     "shell.execute_reply": "2024-05-08T12:20:59.524306Z"
+    },
+    "papermill": {
+     "duration": 0.004501,
+     "end_time": "2024-05-08T12:20:59.525160",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.520659",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -89,7 +179,7 @@
        "'https://api.esios.ree.es/indicators/84?start_date=2021-01-01&end_date=2021-12-31'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,16 +194,40 @@
   {
    "cell_type": "markdown",
    "id": "f62c0e3d-c1a4-4712-82bf-6bddfbdfa060",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001531,
+     "end_time": "2024-05-08T12:20:59.528283",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.526752",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### How to introduce the API parameters through variables?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "3dca7f70-ab31-49a0-9037-6c6f42fa1baf",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:20:59.531759Z",
+     "iopub.status.busy": "2024-05-08T12:20:59.531656Z",
+     "iopub.status.idle": "2024-05-08T12:20:59.533665Z",
+     "shell.execute_reply": "2024-05-08T12:20:59.533479Z"
+    },
+    "papermill": {
+     "duration": 0.004587,
+     "end_time": "2024-05-08T12:20:59.534312",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.529725",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -121,7 +235,7 @@
        "'https://api.esios.ree.es/indicators/84?start_date=2020-01-01&end_date=2020-12-31'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,16 +252,40 @@
   {
    "cell_type": "markdown",
    "id": "9ee140b4-66d8-4178-b2fc-a97cbf06a9d3",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.001398,
+     "end_time": "2024-05-08T12:20:59.537187",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.535789",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Request the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "id": "ceeeaf95-085b-456a-98db-07fcbe53c2c5",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:20:59.540552Z",
+     "iopub.status.busy": "2024-05-08T12:20:59.540455Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.302446Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.301809Z"
+    },
+    "papermill": {
+     "duration": 5.765459,
+     "end_time": "2024-05-08T12:21:05.303993",
+     "exception": false,
+     "start_time": "2024-05-08T12:20:59.538534",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -155,7 +293,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,16 +308,40 @@
   {
    "cell_type": "markdown",
    "id": "5a391643",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.00312,
+     "end_time": "2024-05-08T12:21:05.310952",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.307832",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "### Improved code"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "5b1f899d",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.317530Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.317337Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.475358Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.474892Z"
+    },
+    "papermill": {
+     "duration": 0.162912,
+     "end_time": "2024-05-08T12:21:05.476812",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.313900",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -187,7 +349,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,16 +370,40 @@
   {
    "cell_type": "markdown",
    "id": "3bd6bea9-11b2-400f-8972-628bdf752654",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.003133,
+     "end_time": "2024-05-08T12:21:05.482725",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.479592",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Get the `JSON`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "2a0142bc-585a-42e3-a158-58babf72acc1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.488524Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.488192Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.528656Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.528292Z"
+    },
+    "papermill": {
+     "duration": 0.045391,
+     "end_time": "2024-05-08T12:21:05.530173",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.484782",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -6235,7 +6421,7 @@
        "   ...]}}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6248,16 +6434,40 @@
   {
    "cell_type": "markdown",
    "id": "1a211a93-e018-4852-bd91-2030e7a47c88",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.003796,
+     "end_time": "2024-05-08T12:21:05.538258",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.534462",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Create a `DataFrame`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "2496cffd-ebc8-48ca-8584-18f0fd81d9a1",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.545962Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.545834Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.553494Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.553292Z"
+    },
+    "papermill": {
+     "duration": 0.012356,
+     "end_time": "2024-05-08T12:21:05.554388",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.542032",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -6361,7 +6571,7 @@
        "[6407 rows x 5 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6377,7 +6587,16 @@
   {
    "cell_type": "markdown",
    "id": "ce9d2084-39d6-49b0-9282-cf34490563ef",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.003136,
+     "end_time": "2024-05-08T12:21:05.560877",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.557741",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Automate data processing with functions\n",
     "\n",
@@ -6396,9 +6615,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "id": "f3eedc96-a479-4a98-b31e-461618edec43",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.567763Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.567653Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.569650Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.569458Z"
+    },
+    "papermill": {
+     "duration": 0.006279,
+     "end_time": "2024-05-08T12:21:05.570302",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.564023",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def dataframe_p48(data):\n",
@@ -6430,9 +6664,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "bd7263c8",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.577352Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.577264Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.613341Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.613110Z"
+    },
+    "papermill": {
+     "duration": 0.040673,
+     "end_time": "2024-05-08T12:21:05.614061",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.573388",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -6500,7 +6749,7 @@
        "[6407 rows x 1 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6513,7 +6762,16 @@
   {
    "cell_type": "markdown",
    "id": "d87d1010-99d7-4256-840f-132efb6d22aa",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.003215,
+     "end_time": "2024-05-08T12:21:05.620673",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.617458",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Automate API call with a function\n",
     "\n",
@@ -6522,9 +6780,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "e29319ad-862b-4a2d-91d4-e0197d16f709",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.627690Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.627589Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.629101Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.628913Z"
+    },
+    "papermill": {
+     "duration": 0.005614,
+     "end_time": "2024-05-08T12:21:05.629739",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.624125",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import requests"
@@ -6532,9 +6805,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 12,
    "id": "5bac9a80-622a-4a20-9df2-8ee05e190e33",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.637593Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.637413Z",
+     "iopub.status.idle": "2024-05-08T12:21:05.639332Z",
+     "shell.execute_reply": "2024-05-08T12:21:05.639125Z"
+    },
+    "papermill": {
+     "duration": 0.007012,
+     "end_time": "2024-05-08T12:21:05.640014",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.633002",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_indicator_data(indicator = 84, start_date = '2020-01-01', end_date = '2020-12-31'):\n",
@@ -6554,9 +6842,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 13,
    "id": "cac9a4f1-e135-4624-9f33-7f6db48ee2ec",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-05-08T12:21:05.647138Z",
+     "iopub.status.busy": "2024-05-08T12:21:05.647025Z",
+     "iopub.status.idle": "2024-05-08T12:21:11.918758Z",
+     "shell.execute_reply": "2024-05-08T12:21:11.918492Z"
+    },
+    "papermill": {
+     "duration": 6.276517,
+     "end_time": "2024-05-08T12:21:11.919814",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:05.643297",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -6624,7 +6927,7 @@
        "[8761 rows x 1 columns]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6638,7 +6941,16 @@
   {
    "cell_type": "markdown",
    "id": "d8021393-ac8a-4375-9c3b-921b8a6e4ed7",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.004118,
+     "end_time": "2024-05-08T12:21:11.928570",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:11.924452",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "source": [
     "## Save the function in a portable module"
    ]
@@ -6647,7 +6959,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "afcb0f20-27a9-4b6c-81d0-a2e80e8a26c0",
-   "metadata": {},
+   "metadata": {
+    "papermill": {
+     "duration": 0.00367,
+     "end_time": "2024-05-08T12:21:11.936180",
+     "exception": false,
+     "start_time": "2024-05-08T12:21:11.932510",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": []
   }
@@ -6669,6 +6990,18 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.2"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 13.61808,
+   "end_time": "2024-05-08T12:21:12.157153",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "/Users/sota/Dropbox/2 Business/1 Datons/2 Areas/Courses/ESIOS-API/materials/notebooks/20_Portable Function/21_Parameters/B.ipynb",
+   "output_path": "/Users/sota/Dropbox/2 Business/1 Datons/2 Areas/Courses/ESIOS-API/materials/notebooks/20_Portable Function/21_Parameters/B.ipynb",
+   "parameters": {},
+   "start_time": "2024-05-08T12:20:58.539073",
+   "version": "2.5.0"
   },
   "toc-autonumbering": true
  },
